# ChangeLog for app-text/kbedic
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/kbedic/ChangeLog,v 1.9 2003/08/11 20:36:49 caleb Exp $

*kbedic-4.0 (11 Aug 2003)

  11 Aug 2003; Caleb Tennis <caleb@gentoo.org> : kbedic-4.0.ebuild
  Version bump

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*kbedic-3.1 (11 Sep 2002)

  17 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> kbedic-3.1.ebuild :
  Added IUSE.

  11 Sep 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  A new version, which works with kde/qt3.

*kbedic-2.1 (1 Feb 2002)
 
  19 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> .ebuild :
  Updated to mirror://sourceforge in SRC_URI.

  17 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> kbedic-2.1.ebuild :
  Added IUSE.

  2 Aug 2002; phoen][x <phoenix@gentoo.org> kbedic-2.1.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.