@@ -1,9 +1,7 @@
-MD5 7c6b49b629bf4a3eb3439a2a5ff51165 kbedic-3.1.ebuild 1003
-MD5 da39f3a2c209681b0a4a1e81a9f88a0e kbedic-4.0.ebuild 686
-MD5 84c3f73c4bd7cf6a7ab5ab90a2764112 ChangeLog 1362
+MD5 36778fb0653b2622157502f2ded7f22e kbedic-4.0.ebuild 799
+MD5 452c8f7e3f87932efbdf869883fc862c ChangeLog 1492
 MD5 c2322def158170019bfeb4b68f5950e4 metadata.xml 350
 MD5 fc90d2bd7719168f5821f02e64af3a6f files/kbedic-3.1-location.diff 1189
 MD5 0dabffe05e0bc4a604d72cd1ef91a574 files/kbedic.desktop 361
-MD5 2b59c5d0b88e59010fbb1f2b6052edba files/digest-kbedic-3.1 63
 MD5 1b395c5dbddbb7f8c6d2db891b80c3cd files/digest-kbedic-4.0 63
 MD5 dc706f56c46025d45cdf6918bde9fd7e files/kbedic-3.1-gcc3.diff 4009
