@@ -1,6 +1,10 @@
 # ChangeLog for app-text/kbedic
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kbedic/ChangeLog,v 1.9 2003/08/11 20:36:49 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/kbedic/ChangeLog,v 1.10 2004/01/04 02:17:10 caleb Exp $
+
+  03 Jan 2004; Caleb Tennis <caleb@gentoo.org> kbedic-3.1.ebuild,
+  kbedic-4.0.ebuild:
+  Move the deps around just a little bit
 
 *kbedic-4.0 (11 Aug 2003)
 
